Updated style sheet for readability and ensured completed races don't appear in schedule

--- a/derby_bet/src/static/css/style.css
+++ b/derby_bet/src/static/css/style.css
@@ -464,7 +464,7 @@ body::before {
     padding-right: 5px;
 }
 
-.player-item {
+.player-item, .schedule-item {
     display: flex;
     justify-content: space-between;
     align-items: center;
